--- a/files/cheplugin-meta.yaml
+++ b/files/cheplugin-meta.yaml
@@ -1,13 +1,13 @@
 apiVersion: v2
-publisher: ccn
+publisher: leehyeongrak
+name: rhamt-demo
 version: latest
 type: VS Code extension
-name: rhamt-demo
 displayName: Migration Toolkit
 title: Migration Toolkit for Applications (MTA)
 description: Migration Toolkit for Applications (MTA)
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
-repository: https://github.com/SpektraSystems/Red-Hat-Modernize-Apps
+repository: https://github.com/yang-benny-liu/Red-Hat-Modernize-Apps
 category: Other
 firstPublicationDate: "2020-09-03"
 spec:
