--- a/files/cheplugin-meta.yaml
+++ b/files/cheplugin-meta.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-publisher: leehyeongrak
+publisher: ccn
 name: rhamt-demo
 version: latest
 type: VS Code extension
@@ -7,11 +7,30 @@ displayName: Migration Toolkit
 title: Migration Toolkit for Applications (MTA)
 description: Migration Toolkit for Applications (MTA)
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
-repository: https://github.com/tabeyti/jenkins-jack
+repository: https://github.com/yang-benny-liu/Red-Hat-Modernize-Apps
 category: Other
 firstPublicationDate: "2020-09-03"
 spec:
+  endpoints:
+  - name: "configuration-endpoint"
+    public: true
+    targetPort: 61436
+    attributes:
+      protocol: http
+  - name: "report-endpoint"
+    public: true
+    targetPort: 61435
+    attributes:
+      protocol: http
   containers:
-    - image: "quay.io/eclipse/che-sidecar-java:8"
+    - image: "quay.io/windupeng/mta-vscode-extension"
+      name: rhamt-extension
+      mountSources: true
+      ports:
+        - exposedPort: 61435
+        - exposedPort: 61436
+      volumes:
+        - name: rhamt-vscode
+          mountPath: "/home/theia/mta/redhat.mta-vscode-extension"
   extensions:
-    - https://github.com/leehyeongrak/vsixes/raw/master/jenkins-jack-1.0.0_vsixhub.com.vsix
+    - https://github.com/yang-benny-liu/Red-Hat-Modernize-Apps/edit/master/files/mta-vscode-extension-0.0.76-186.vsix
